<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    tools:context=".MainActivity">

    <!--    welocme texts -->

    <TextView
        android:id="@+id/log_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter"
        android:text="@string/log_in"
        android:textColor="#14304A"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hi_text"
        style="@style/poppins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/hi_welcome"
        android:textColor="#C4C4C4"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_in_text" />

    <!--        input fields -->
    <LinearLayout
        android:id="@+id/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hi_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/email_address"
            android:textColor="#14304A"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_your_email"
            android:minHeight="33dp"
            android:textColorHint="#C4C4C4"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/password"
            android:textColor="#14304A"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/eye"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="33dp"
            android:paddingEnd="5dp"
            android:textColorHint="#C4C4C4"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />
    </LinearLayout>

    <!--    action button -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/actionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg"
        android:text="@string/log_in"
        android:textColor="#424242"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputs" />
    <!--    Forgotten password -->
    <TextView
        android:id="@+id/forgottenPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/forgotten_your_password"
        android:textColor="#14304A"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionButton"

        />

    <!--    horizontal line and text inside design -->

    <LinearLayout
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgottenPassword">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="10dp"
            android:text="@string/or_sign_in_with"
            android:textColor="#C4C4C4" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black" />
    </LinearLayout>

    <!--    0auth with social links -->

    <LinearLayout
        android:id="@+id/socialAuthButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/forgottenPasswordBottom"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded"
            android:contentDescription="@string/img"
            android:paddingVertical="8dp"
            android:src="@drawable/apple" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded"
            android:contentDescription="@string/img"
            android:padding="5dp"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded"
            android:contentDescription="@string/img"
            android:src="@drawable/fb" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgottenPasswordBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/forgotten_your_passwrod"
        android:textColor="#0277BD"
        android:textColorHint="#C4C4C4"
        app:layout_constraintBottom_toTopOf="@id/createAnAccount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <TextView
        android:id="@+id/createAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/create_an_account"
        android:textColor="#2E7D32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>